hue.css
html, body {
  background-color: #1e1e1e;
  color: #dddddd;
}
.title {
  color: #dddddd;
}
.subtitle {
  color: #bbbbbb;
}
.subtitle strong {
  color: #dddddd;
}
.tabs.is-boxed li.is-active a {
  background-color: #00000044;
  color: #dddddd;
  border-color: #2f2f2f !important;
  border-width: 2px !important;
}
.tabs.is-boxed a:hover {
  background-color: #00000011;
  color: #dddddd;
  border-color: #00000022;
}
.tabs a {
  color: #888888;
  border-radius: 20px !important;
  margin-bottom: 0;
}
.tabs ul {
  border-bottom-color: #00000044;
  border-bottom-width: 0;
}
.modal-card-head, .modal-card-foot {
  background-color: #1e1e1e;
}
.modal-card-head {
  border-bottom-color: #00000044;
}
.modal-card-foot {
  border-top-color: #00000044;
}
.modal-card-title {
  color: #ffffff;
}
.modal-card-body {
  background-color: #222222;
}
.button {
  background-color: #2a2a2a;
  color: #ffffff;
  border-color: #00000044;
}
.button:hover {
  border-color: #44444499;
  color: #ffffff;
}
footer.footer {
  margin-top: 60px;
  background-color: #00000011;
  color: #aaaaaa;
  font-size: 13px;
}
footer.footer strong {
  color: #cccccc;
}
footer.footer a {
  color: #cccccc;
}
footer.footer a:hover {
  color: #ffffff;
}
#hue #groups, #hue #lights {
  padding: 0px 10px;
}
.huegroup button, .huelight button {
  border-width: 0;
  background-color: #00000000 !important;
}
.huegroup, .huelight {
  border-radius: 20px 20px 0px 0px;
}
.huegroup.turned-off, .huelight.turned-off {
  border-radius: 20px;
}
.huegroup.turned-off button:first-of-type, .huelight.turned-off button:first-of-type {
  border-radius: 0px 20px 20px 0px;
}
.huegroup button:first-of-type, .huelight button:first-of-type {
  border-radius: 0px 20px 0px 0px;
}
.brightness-slider input {
  border-radius: 0px 0px 20px 20px;
}

#color-picker .IroSlider {
  display: none !important;
}
#color-picker .IroWheel {
  margin: auto;
}

@media screen and (max-width: 768px) {
  .modal-content, .modal-card {
    margin: 0 !important;
    position: fixed !important;
    bottom: 0 !important;
  }
}

.huelight, .huegroup {
  height: 80px;
  line-height: 80px;
  margin: 30px 0px 0px 0px;
  padding: 0px 0px 0px 40px;
  font-size: 20px;
  font-weight: bold;
}

/* The slider itself */
.brightness-slider input {
  -webkit-appearance: none;  /* Override default CSS styles */
  appearance: none;
  width: 100%; /* Full-width */
  height: 25px; /* Specified height */
  background: #d3d3d3; /* Grey background */
  background-image: linear-gradient(to right, #777777, #ffffff);
  outline: none; /* Remove outline */
  -webkit-transition: .2s; /* 0.2 seconds transition on hover */
  transition: opacity .2s;
}


/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
.brightness-slider input::-webkit-slider-thumb {
  -webkit-appearance: none; /* Override default look */
  appearance: none;
  width: 25px; /* Set a specific slider handle width */
  height: 25px; /* Slider handle height */
  background: #ffffff; /* Green background */
  opacity: 0.7;
  border: 0px solid black;
  border-radius: 10px;
  box-shadow: 0px 0px 3px 1px rgba(0,0,0,0.75);
  cursor: pointer; /* Cursor on hover */
  z-index: 2;
  position: relative;

}

.brightness-slider input::-moz-range-thumb {
  width: 25px; /* Set a specific slider handle width */
  height: 25px; /* Slider handle height */
  background: #4CAF50; /* Green background */
  cursor: pointer; /* Cursor on hover */
}



/* The slider itself */
.brightness-slider-off input {
  -webkit-appearance: none;  /* Override default CSS styles */
  appearance: none;
  width: 100%; /* Full-width */
  height: 25px; /* Specified height */
  outline: none; /* Remove outline */
  -webkit-transition: .2s; /* 0.2 seconds transition on hover */
  transition: opacity .2s;
}


/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
.brightness-slider-off input::-webkit-slider-thumb {
  -webkit-appearance: none; /* Override default look */
  appearance: none;
  width: 25px; /* Set a specific slider handle width */
  height: 25px; /* Slider handle height */
  background: #ffffff; /* Green background */
  opacity: 0.7;
  border: 0px solid black;
  border-radius: 10px;
  box-shadow: 0px 0px 3px 1px rgba(0,0,0,0.75);
  cursor: pointer; /* Cursor on hover */
  z-index: 2;
  position: relative;
  display: none;

}

.brightness-slider-off input::-moz-range-thumb {
  width: 25px; /* Set a specific slider handle width */
  height: 25px; /* Slider handle height */
  background: #4CAF50; /* Green background */
  cursor: pointer; /* Cursor on hover */
}

